fix contrast errors

--- a/css/footer.css
+++ b/css/footer.css
@@ -20,8 +20,8 @@
   }
   footer {
     margin: 10px -10px -10px -10px;
-    background-color: #575A61;
-    color: #A5AEB3;
+    background-color: #3F4146;
+    color: #D3D7D9;
     padding: 10px 21%;
 }
 footer a {
