--- a/css/header.css
+++ b/css/header.css
@@ -22,11 +22,11 @@ header {
     margin-top: 6px;
 }
 .bot-nav a {
-    color:  #09812b;
+    color: #006341;
+    /* color:  #09812b; */
     margin-right: 30px;
     font-weight: 600;
     font-size: 19px;
-    /* line-height: 1.2em; */
 }
 .top-left-nav a:active {
     color: #006341;
@@ -36,7 +36,8 @@ header {
     color: #006341;
 }
 .top-left-nav a {
-    color:  #92D26B;
+    color:  #09812b;
+    /* color:  #92D26B; */
     margin-right: 20px;
     font-size: large;
 }
@@ -55,7 +56,8 @@ header {
     flex-direction: column;
     align-items: center;
     margin: 0 10px;
-    color:  #92D26B;
+    color: #09812b;
+    /* color:  #92D26B; */
     font-size: 11px;
     font-weight: normal;
 }
@@ -69,7 +71,8 @@ header {
     background-color: rgb(255, 255, 255);
 }
 .icon {
-    color:  #92D26B;
+    /* color:  #92D26B; */
+    color: #09812b;
     font-size: 20px;
 }
 
